y.output
   0  $accept : program $end

   1  program : first_func_def extdefs
   2          | extdefs_no_func first_func_def extdefs
   3          | first_func_def
   4          | extdefs_no_func first_func_def

   5  var : IDEN indexs
   6      | IDEN

   7  extdefs_no_func : extdefs_no_func extdef_no_func
   8                  | extdef_no_func

   9  extdef_no_func : type IDEN '(' para_in ')' ';'
  10                 | VOID IDEN '(' para_in ')' ';'
  11                 | type iden_list_init ';'
  12                 | CONST type const_iden_list ';'

  13  iden_list_init : iden_list_init ',' IDEN
  14                 | iden_list_init ',' IDEN init
  15                 | iden_list_init ',' IDEN indexs_dec array_init
  16                 | iden_list_init ',' IDEN indexs_dec
  17                 | IDEN init
  18                 | IDEN
  19                 | IDEN indexs_dec array_init
  20                 | IDEN indexs_dec

  21  const_iden_list : const_iden_list ',' IDEN const_init
  22                  | IDEN const_init

  23  const_init : '=' literal

  24  extdefs : extdefs extdef
  25          | extdef

  26  extdef : type IDEN '(' para_in ')' ';'
  27         | VOID IDEN '(' para_in ')' ';'
  28         | func_def
  29         | type iden_list_init ';'
  30         | CONST type const_iden_list ';'

  31  decs_x :
  32         | decs

  33  decs : decs dec
  34       | dec

  35  dec : type iden_list_init ';'
  36      | CONST type const_iden_list ';'

  37  expr_x :
  38         | expr

  39  expr : literal
  40       | var
  41       | var PLUSPLUS
  42       | var MINUSMINUS
  43       | IDEN '(' exprs_comma_x ')'
  44       | expr '+' expr
  45       | expr '-' expr
  46       | expr '*' expr
  47       | expr '/' expr
  48       | expr '%' expr
  49       | expr '>' expr
  50       | expr '<' expr
  51       | expr GE expr
  52       | expr LE expr
  53       | expr EQUAL expr
  54       | expr NOTEQUAL expr
  55       | NOT expr
  56       | expr ANDAND expr
  57       | expr OROR expr
  58       | '-' expr
  59       | '(' expr ')'

  60  expr_no_invoke : literal
  61                 | var
  62                 | var PLUSPLUS
  63                 | var MINUSMINUS
  64                 | expr_no_invoke '+' expr_no_invoke
  65                 | expr_no_invoke '-' expr_no_invoke
  66                 | expr_no_invoke '*' expr_no_invoke
  67                 | expr_no_invoke '/' expr_no_invoke
  68                 | expr_no_invoke '%' expr_no_invoke
  69                 | expr_no_invoke '>' expr_no_invoke
  70                 | expr_no_invoke '<' expr_no_invoke
  71                 | expr_no_invoke GE expr_no_invoke
  72                 | expr_no_invoke LE expr_no_invoke
  73                 | expr_no_invoke EQUAL expr_no_invoke
  74                 | expr_no_invoke NOTEQUAL expr_no_invoke
  75                 | NOT expr_no_invoke
  76                 | expr_no_invoke ANDAND expr_no_invoke
  77                 | expr_no_invoke OROR expr_no_invoke
  78                 | '-' expr_no_invoke
  79                 | '(' expr_no_invoke ')'

  80  stmts_x :
  81          | stmts

  82  stmts : stmts stmt
  83        | stmt

  84  $$1 :

  85  stmt : var '=' $$1 expr ';'
  86       | blink
  87       | if_stmt
  88       | while_stmt
  89       | switch_stmt
  90       | for_stmt
  91       | IDEN '(' exprs_comma_x ')' ';'
  92       | RETURN expr ';'
  93       | BREAK ';'
  94       | CONTINUE ';'

  95  if_stmt : IF '(' expr ')' compound ELSE compound
  96          | IF '(' expr ')' compound

  97  while_stmt : WHILE '(' expr ')' compound
  98             | DO compound WHILE '(' expr ')' ';'

  99  for_stmt : FOR '(' expr_x ';' expr_x ';' expr_x ')' compound

 100  switch_stmt : SWITCH '(' IDEN ')' '{' cases default_x '}'

 101  cases : cases case
 102        | case

 103  case : CASE CHAR_LIT ':' stmts_x
 104       | CASE INT_LIT ':' stmts_x

 105  default_x :
 106            | DEFAULT ':' stmts_x

 107  first_func_def : type IDEN '(' para_in ')' compound
 108                 | VOID IDEN '(' para_in ')' compound

 109  func_def : type IDEN '(' para_in ')' compound
 110           | VOID IDEN '(' para_in ')' compound

 111  compound : '{' decs_x stmts_x '}'

 112  exprs_comma_x :
 113                | exprs_comma

 114  exprs_comma : exprs_comma ',' expr
 115              | expr

 116  exprs_comma_no_invoke_x :
 117                          | exprs_comma_no_invoke

 118  exprs_comma_no_invoke : exprs_comma_no_invoke ',' expr_no_invoke
 119                        | expr_no_invoke

 120  $$2 :

 121  init : '=' $$2 expr

 122  array_init : '=' '{' exprs_comma_no_invoke_x '}'

 123  para_in :
 124          | paras

 125  paras : paras ',' para
 126        | para

 127  para : type IDEN indexs_dec
 128       | type IDEN

 129  indexs_dec : indexs_dec index_dec
 130             | index_dec

 131  index_dec : '[' INT_LIT ']'

 132  indexs : indexs index
 133         | index

 134  index : '[' expr ']'

 135  type : INT
 136       | DOUBLE
 137       | CHAR
 138       | BOOL

 139  literal : CHAR_LIT
 140          | INT_LIT
 141          | DOUBLE_LIT
 142          | BOOL_LIT
 143          | STRING_LIT

 144  $$3 :

 145  blink : DIGITAL_WRITE '(' $$3 expr ',' INT_LIT ')' ';'

 146  $$4 :

 147  blink : DELAY '(' $$4 expr ')' ';'

state 0
	$accept : . program $end  (0)

	INT  shift 1
	DOUBLE  shift 2
	BOOL  shift 3
	CHAR  shift 4
	VOID  shift 5
	CONST  shift 6
	.  error

	program  goto 7
	type  goto 8
	first_func_def  goto 9
	extdefs_no_func  goto 10
	extdef_no_func  goto 11


state 1
	type : INT .  (135)

	.  reduce 135


state 2
	type : DOUBLE .  (136)

	.  reduce 136


state 3
	type : BOOL .  (138)

	.  reduce 138


state 4
	type : CHAR .  (137)

	.  reduce 137


state 5
	extdef_no_func : VOID . IDEN '(' para_in ')' ';'  (10)
	first_func_def : VOID . IDEN '(' para_in ')' compound  (108)

	IDEN  shift 12
	.  error


state 6
	extdef_no_func : CONST . type const_iden_list ';'  (12)

	INT  shift 1
	DOUBLE  shift 2
	BOOL  shift 3
	CHAR  shift 4
	.  error

	type  goto 13


state 7
	$accept : program . $end  (0)

	$end  accept


state 8
	extdef_no_func : type . IDEN '(' para_in ')' ';'  (9)
	extdef_no_func : type . iden_list_init ';'  (11)
	first_func_def : type . IDEN '(' para_in ')' compound  (107)

	IDEN  shift 14
	.  error

	iden_list_init  goto 15


state 9
	program : first_func_def . extdefs  (1)
	program : first_func_def .  (3)

	INT  shift 1
	DOUBLE  shift 2
	BOOL  shift 3
	CHAR  shift 4
	VOID  shift 16
	CONST  shift 17
	$end  reduce 3

	type  goto 18
	extdefs  goto 19
	extdef  goto 20
	func_def  goto 21


state 10
	program : extdefs_no_func . first_func_def extdefs  (2)
	program : extdefs_no_func . first_func_def  (4)
	extdefs_no_func : extdefs_no_func . extdef_no_func  (7)

	INT  shift 1
	DOUBLE  shift 2
	BOOL  shift 3
	CHAR  shift 4
	VOID  shift 5
	CONST  shift 6
	.  error

	type  goto 8
	first_func_def  goto 22
	extdef_no_func  goto 23


state 11
	extdefs_no_func : extdef_no_func .  (8)

	.  reduce 8


state 12
	extdef_no_func : VOID IDEN . '(' para_in ')' ';'  (10)
	first_func_def : VOID IDEN . '(' para_in ')' compound  (108)

	'('  shift 24
	.  error


state 13
	extdef_no_func : CONST type . const_iden_list ';'  (12)

	IDEN  shift 25
	.  error

	const_iden_list  goto 26


state 14
	extdef_no_func : type IDEN . '(' para_in ')' ';'  (9)
	iden_list_init : IDEN . init  (17)
	iden_list_init : IDEN .  (18)
	iden_list_init : IDEN . indexs_dec array_init  (19)
	iden_list_init : IDEN . indexs_dec  (20)
	first_func_def : type IDEN . '(' para_in ')' compound  (107)

	'('  shift 27
	'='  shift 28
	'['  shift 29
	';'  reduce 18
	','  reduce 18

	init  goto 30
	indexs_dec  goto 31
	index_dec  goto 32


state 15
	extdef_no_func : type iden_list_init . ';'  (11)
	iden_list_init : iden_list_init . ',' IDEN  (13)
	iden_list_init : iden_list_init . ',' IDEN init  (14)
	iden_list_init : iden_list_init . ',' IDEN indexs_dec array_init  (15)
	iden_list_init : iden_list_init . ',' IDEN indexs_dec  (16)

	';'  shift 33
	','  shift 34
	.  error


state 16
	extdef : VOID . IDEN '(' para_in ')' ';'  (27)
	func_def : VOID . IDEN '(' para_in ')' compound  (110)

	IDEN  shift 35
	.  error


state 17
	extdef : CONST . type const_iden_list ';'  (30)

	INT  shift 1
	DOUBLE  shift 2
	BOOL  shift 3
	CHAR  shift 4
	.  error

	type  goto 36


state 18
	extdef : type . IDEN '(' para_in ')' ';'  (26)
	extdef : type . iden_list_init ';'  (29)
	func_def : type . IDEN '(' para_in ')' compound  (109)

	IDEN  shift 37
	.  error

	iden_list_init  goto 38


state 19
	program : first_func_def extdefs .  (1)
	extdefs : extdefs . extdef  (24)

	INT  shift 1
	DOUBLE  shift 2
	BOOL  shift 3
	CHAR  shift 4
	VOID  shift 16
	CONST  shift 17
	$end  reduce 1

	type  goto 18
	extdef  goto 39
	func_def  goto 21


state 20
	extdefs : extdef .  (25)

	.  reduce 25


state 21
	extdef : func_def .  (28)

	.  reduce 28


state 22
	program : extdefs_no_func first_func_def . extdefs  (2)
	program : extdefs_no_func first_func_def .  (4)

	INT  shift 1
	DOUBLE  shift 2
	BOOL  shift 3
	CHAR  shift 4
	VOID  shift 16
	CONST  shift 17
	$end  reduce 4

	type  goto 18
	extdefs  goto 40
	extdef  goto 20
	func_def  goto 21


state 23
	extdefs_no_func : extdefs_no_func extdef_no_func .  (7)

	.  reduce 7


state 24
	extdef_no_func : VOID IDEN '(' . para_in ')' ';'  (10)
	first_func_def : VOID IDEN '(' . para_in ')' compound  (108)
	para_in : .  (123)

	INT  shift 1
	DOUBLE  shift 2
	BOOL  shift 3
	CHAR  shift 4
	')'  reduce 123

	type  goto 41
	para_in  goto 42
	paras  goto 43
	para  goto 44


state 25
	const_iden_list : IDEN . const_init  (22)

	'='  shift 45
	.  error

	const_init  goto 46


state 26
	extdef_no_func : CONST type const_iden_list . ';'  (12)
	const_iden_list : const_iden_list . ',' IDEN const_init  (21)

	';'  shift 47
	','  shift 48
	.  error


state 27
	extdef_no_func : type IDEN '(' . para_in ')' ';'  (9)
	first_func_def : type IDEN '(' . para_in ')' compound  (107)
	para_in : .  (123)

	INT  shift 1
	DOUBLE  shift 2
	BOOL  shift 3
	CHAR  shift 4
	')'  reduce 123

	type  goto 41
	para_in  goto 49
	paras  goto 43
	para  goto 44


state 28
	init : '=' . $$2 expr  (121)
	$$2 : .  (120)

	.  reduce 120

	$$2  goto 50


state 29
	index_dec : '[' . INT_LIT ']'  (131)

	INT_LIT  shift 51
	.  error


state 30
	iden_list_init : IDEN init .  (17)

	.  reduce 17


state 31
	iden_list_init : IDEN indexs_dec . array_init  (19)
	iden_list_init : IDEN indexs_dec .  (20)
	indexs_dec : indexs_dec . index_dec  (129)

	'='  shift 52
	'['  shift 29
	';'  reduce 20
	','  reduce 20

	array_init  goto 53
	index_dec  goto 54


state 32
	indexs_dec : index_dec .  (130)

	.  reduce 130


state 33
	extdef_no_func : type iden_list_init ';' .  (11)

	.  reduce 11


state 34
	iden_list_init : iden_list_init ',' . IDEN  (13)
	iden_list_init : iden_list_init ',' . IDEN init  (14)
	iden_list_init : iden_list_init ',' . IDEN indexs_dec array_init  (15)
	iden_list_init : iden_list_init ',' . IDEN indexs_dec  (16)

	IDEN  shift 55
	.  error


state 35
	extdef : VOID IDEN . '(' para_in ')' ';'  (27)
	func_def : VOID IDEN . '(' para_in ')' compound  (110)

	'('  shift 56
	.  error


state 36
	extdef : CONST type . const_iden_list ';'  (30)

	IDEN  shift 25
	.  error

	const_iden_list  goto 57


state 37
	iden_list_init : IDEN . init  (17)
	iden_list_init : IDEN .  (18)
	iden_list_init : IDEN . indexs_dec array_init  (19)
	iden_list_init : IDEN . indexs_dec  (20)
	extdef : type IDEN . '(' para_in ')' ';'  (26)
	func_def : type IDEN . '(' para_in ')' compound  (109)

	'('  shift 58
	'='  shift 28
	'['  shift 29
	';'  reduce 18
	','  reduce 18

	init  goto 30
	indexs_dec  goto 31
	index_dec  goto 32


state 38
	iden_list_init : iden_list_init . ',' IDEN  (13)
	iden_list_init : iden_list_init . ',' IDEN init  (14)
	iden_list_init : iden_list_init . ',' IDEN indexs_dec array_init  (15)
	iden_list_init : iden_list_init . ',' IDEN indexs_dec  (16)
	extdef : type iden_list_init . ';'  (29)

	';'  shift 59
	','  shift 34
	.  error


state 39
	extdefs : extdefs extdef .  (24)

	.  reduce 24


state 40
	program : extdefs_no_func first_func_def extdefs .  (2)
	extdefs : extdefs . extdef  (24)

	INT  shift 1
	DOUBLE  shift 2
	BOOL  shift 3
	CHAR  shift 4
	VOID  shift 16
	CONST  shift 17
	$end  reduce 2

	type  goto 18
	extdef  goto 39
	func_def  goto 21


state 41
	para : type . IDEN indexs_dec  (127)
	para : type . IDEN  (128)

	IDEN  shift 60
	.  error


state 42
	extdef_no_func : VOID IDEN '(' para_in . ')' ';'  (10)
	first_func_def : VOID IDEN '(' para_in . ')' compound  (108)

	')'  shift 61
	.  error


state 43
	para_in : paras .  (124)
	paras : paras . ',' para  (125)

	','  shift 62
	')'  reduce 124


state 44
	paras : para .  (126)

	.  reduce 126


state 45
	const_init : '=' . literal  (23)

	STRING_LIT  shift 63
	INT_LIT  shift 64
	BOOL_LIT  shift 65
	CHAR_LIT  shift 66
	DOUBLE_LIT  shift 67
	.  error

	literal  goto 68


state 46
	const_iden_list : IDEN const_init .  (22)

	.  reduce 22


state 47
	extdef_no_func : CONST type const_iden_list ';' .  (12)

	.  reduce 12


state 48
	const_iden_list : const_iden_list ',' . IDEN const_init  (21)

	IDEN  shift 69
	.  error


state 49
	extdef_no_func : type IDEN '(' para_in . ')' ';'  (9)
	first_func_def : type IDEN '(' para_in . ')' compound  (107)

	')'  shift 70
	.  error


state 50
	init : '=' $$2 . expr  (121)

	IDEN  shift 71
	STRING_LIT  shift 63
	INT_LIT  shift 64
	BOOL_LIT  shift 65
	NOT  shift 72
	CHAR_LIT  shift 66
	DOUBLE_LIT  shift 67
	'-'  shift 73
	'('  shift 74
	.  error

	literal  goto 75
	expr  goto 76
	var  goto 77


state 51
	index_dec : '[' INT_LIT . ']'  (131)

	']'  shift 78
	.  error


state 52
	array_init : '=' . '{' exprs_comma_no_invoke_x '}'  (122)

	'{'  shift 79
	.  error


state 53
	iden_list_init : IDEN indexs_dec array_init .  (19)

	.  reduce 19


state 54
	indexs_dec : indexs_dec index_dec .  (129)

	.  reduce 129


state 55
	iden_list_init : iden_list_init ',' IDEN .  (13)
	iden_list_init : iden_list_init ',' IDEN . init  (14)
	iden_list_init : iden_list_init ',' IDEN . indexs_dec array_init  (15)
	iden_list_init : iden_list_init ',' IDEN . indexs_dec  (16)

	'='  shift 28
	'['  shift 29
	';'  reduce 13
	','  reduce 13

	init  goto 80
	indexs_dec  goto 81
	index_dec  goto 32


state 56
	extdef : VOID IDEN '(' . para_in ')' ';'  (27)
	func_def : VOID IDEN '(' . para_in ')' compound  (110)
	para_in : .  (123)

	INT  shift 1
	DOUBLE  shift 2
	BOOL  shift 3
	CHAR  shift 4
	')'  reduce 123

	type  goto 41
	para_in  goto 82
	paras  goto 43
	para  goto 44


state 57
	const_iden_list : const_iden_list . ',' IDEN const_init  (21)
	extdef : CONST type const_iden_list . ';'  (30)

	';'  shift 83
	','  shift 48
	.  error


state 58
	extdef : type IDEN '(' . para_in ')' ';'  (26)
	func_def : type IDEN '(' . para_in ')' compound  (109)
	para_in : .  (123)

	INT  shift 1
	DOUBLE  shift 2
	BOOL  shift 3
	CHAR  shift 4
	')'  reduce 123

	type  goto 41
	para_in  goto 84
	paras  goto 43
	para  goto 44


state 59
	extdef : type iden_list_init ';' .  (29)

	.  reduce 29


state 60
	para : type IDEN . indexs_dec  (127)
	para : type IDEN .  (128)

	'['  shift 29
	')'  reduce 128
	','  reduce 128

	indexs_dec  goto 85
	index_dec  goto 32


state 61
	extdef_no_func : VOID IDEN '(' para_in ')' . ';'  (10)
	first_func_def : VOID IDEN '(' para_in ')' . compound  (108)

	';'  shift 86
	'{'  shift 87
	.  error

	compound  goto 88


state 62
	paras : paras ',' . para  (125)

	INT  shift 1
	DOUBLE  shift 2
	BOOL  shift 3
	CHAR  shift 4
	.  error

	type  goto 41
	para  goto 89


state 63
	literal : STRING_LIT .  (143)

	.  reduce 143


state 64
	literal : INT_LIT .  (140)

	.  reduce 140


state 65
	literal : BOOL_LIT .  (142)

	.  reduce 142


state 66
	literal : CHAR_LIT .  (139)

	.  reduce 139


state 67
	literal : DOUBLE_LIT .  (141)

	.  reduce 141


state 68
	const_init : '=' literal .  (23)

	.  reduce 23


state 69
	const_iden_list : const_iden_list ',' IDEN . const_init  (21)

	'='  shift 45
	.  error

	const_init  goto 90


state 70
	extdef_no_func : type IDEN '(' para_in ')' . ';'  (9)
	first_func_def : type IDEN '(' para_in ')' . compound  (107)

	';'  shift 91
	'{'  shift 87
	.  error

	compound  goto 92


state 71
	var : IDEN . indexs  (5)
	var : IDEN .  (6)
	expr : IDEN . '(' exprs_comma_x ')'  (43)

	'('  shift 93
	'['  shift 94
	PLUSPLUS  reduce 6
	MINUSMINUS  reduce 6
	ANDAND  reduce 6
	OROR  reduce 6
	GE  reduce 6
	LE  reduce 6
	EQUAL  reduce 6
	NOTEQUAL  reduce 6
	'>'  reduce 6
	'<'  reduce 6
	'+'  reduce 6
	'-'  reduce 6
	'*'  reduce 6
	'/'  reduce 6
	'%'  reduce 6
	')'  reduce 6
	';'  reduce 6
	','  reduce 6
	']'  reduce 6

	indexs  goto 95
	index  goto 96


state 72
	expr : NOT . expr  (55)

	IDEN  shift 71
	STRING_LIT  shift 63
	INT_LIT  shift 64
	BOOL_LIT  shift 65
	NOT  shift 72
	CHAR_LIT  shift 66
	DOUBLE_LIT  shift 67
	'-'  shift 73
	'('  shift 74
	.  error

	literal  goto 75
	expr  goto 97
	var  goto 77


state 73
	expr : '-' . expr  (58)

	IDEN  shift 71
	STRING_LIT  shift 63
	INT_LIT  shift 64
	BOOL_LIT  shift 65
	NOT  shift 72
	CHAR_LIT  shift 66
	DOUBLE_LIT  shift 67
	'-'  shift 73
	'('  shift 74
	.  error

	literal  goto 75
	expr  goto 98
	var  goto 77


state 74
	expr : '(' . expr ')'  (59)

	IDEN  shift 71
	STRING_LIT  shift 63
	INT_LIT  shift 64
	BOOL_LIT  shift 65
	NOT  shift 72
	CHAR_LIT  shift 66
	DOUBLE_LIT  shift 67
	'-'  shift 73
	'('  shift 74
	.  error

	literal  goto 75
	expr  goto 99
	var  goto 77


state 75
	expr : literal .  (39)

	.  reduce 39


state 76
	expr : expr . '+' expr  (44)
	expr : expr . '-' expr  (45)
	expr : expr . '*' expr  (46)
	expr : expr . '/' expr  (47)
	expr : expr . '%' expr  (48)
	expr : expr . '>' expr  (49)
	expr : expr . '<' expr  (50)
	expr : expr . GE expr  (51)
	expr : expr . LE expr  (52)
	expr : expr . EQUAL expr  (53)
	expr : expr . NOTEQUAL expr  (54)
	expr : expr . ANDAND expr  (56)
	expr : expr . OROR expr  (57)
	init : '=' $$2 expr .  (121)

	ANDAND  shift 100
	OROR  shift 101
	GE  shift 102
	LE  shift 103
	EQUAL  shift 104
	NOTEQUAL  shift 105
	'>'  shift 106
	'<'  shift 107
	'+'  shift 108
	'-'  shift 109
	'*'  shift 110
	'/'  shift 111
	'%'  shift 112
	';'  reduce 121
	','  reduce 121


state 77
	expr : var .  (40)
	expr : var . PLUSPLUS  (41)
	expr : var . MINUSMINUS  (42)

	PLUSPLUS  shift 113
	MINUSMINUS  shift 114
	ANDAND  reduce 40
	OROR  reduce 40
	GE  reduce 40
	LE  reduce 40
	EQUAL  reduce 40
	NOTEQUAL  reduce 40
	'>'  reduce 40
	'<'  reduce 40
	'+'  reduce 40
	'-'  reduce 40
	'*'  reduce 40
	'/'  reduce 40
	'%'  reduce 40
	')'  reduce 40
	';'  reduce 40
	','  reduce 40
	']'  reduce 40


state 78
	index_dec : '[' INT_LIT ']' .  (131)

	.  reduce 131


state 79
	array_init : '=' '{' . exprs_comma_no_invoke_x '}'  (122)
	exprs_comma_no_invoke_x : .  (116)

	IDEN  shift 115
	STRING_LIT  shift 63
	INT_LIT  shift 64
	BOOL_LIT  shift 65
	NOT  shift 116
	CHAR_LIT  shift 66
	DOUBLE_LIT  shift 67
	'-'  shift 117
	'('  shift 118
	'}'  reduce 116

	literal  goto 119
	var  goto 120
	expr_no_invoke  goto 121
	exprs_comma_no_invoke_x  goto 122
	exprs_comma_no_invoke  goto 123


state 80
	iden_list_init : iden_list_init ',' IDEN init .  (14)

	.  reduce 14


state 81
	iden_list_init : iden_list_init ',' IDEN indexs_dec . array_init  (15)
	iden_list_init : iden_list_init ',' IDEN indexs_dec .  (16)
	indexs_dec : indexs_dec . index_dec  (129)

	'='  shift 52
	'['  shift 29
	';'  reduce 16
	','  reduce 16

	array_init  goto 124
	index_dec  goto 54


state 82
	extdef : VOID IDEN '(' para_in . ')' ';'  (27)
	func_def : VOID IDEN '(' para_in . ')' compound  (110)

	')'  shift 125
	.  error


state 83
	extdef : CONST type const_iden_list ';' .  (30)

	.  reduce 30


state 84
	extdef : type IDEN '(' para_in . ')' ';'  (26)
	func_def : type IDEN '(' para_in . ')' compound  (109)

	')'  shift 126
	.  error


state 85
	para : type IDEN indexs_dec .  (127)
	indexs_dec : indexs_dec . index_dec  (129)

	'['  shift 29
	')'  reduce 127
	','  reduce 127

	index_dec  goto 54


state 86
	extdef_no_func : VOID IDEN '(' para_in ')' ';' .  (10)

	.  reduce 10


state 87
	compound : '{' . decs_x stmts_x '}'  (111)
	decs_x : .  (31)

	INT  shift 1
	DOUBLE  shift 2
	BOOL  shift 3
	CHAR  shift 4
	CONST  shift 127
	IDEN  reduce 31
	SWITCH  reduce 31
	IF  reduce 31
	FOR  reduce 31
	WHILE  reduce 31
	DO  reduce 31
	RETURN  reduce 31
	CONTINUE  reduce 31
	BREAK  reduce 31
	DIGITAL_WRITE  reduce 31
	DELAY  reduce 31
	'}'  reduce 31

	type  goto 128
	decs_x  goto 129
	decs  goto 130
	dec  goto 131


state 88
	first_func_def : VOID IDEN '(' para_in ')' compound .  (108)

	.  reduce 108


state 89
	paras : paras ',' para .  (125)

	.  reduce 125


state 90
	const_iden_list : const_iden_list ',' IDEN const_init .  (21)

	.  reduce 21


state 91
	extdef_no_func : type IDEN '(' para_in ')' ';' .  (9)

	.  reduce 9


state 92
	first_func_def : type IDEN '(' para_in ')' compound .  (107)

	.  reduce 107


state 93
	expr : IDEN '(' . exprs_comma_x ')'  (43)
	exprs_comma_x : .  (112)

	IDEN  shift 71
	STRING_LIT  shift 63
	INT_LIT  shift 64
	BOOL_LIT  shift 65
	NOT  shift 72
	CHAR_LIT  shift 66
	DOUBLE_LIT  shift 67
	'-'  shift 73
	'('  shift 74
	')'  reduce 112

	literal  goto 75
	expr  goto 132
	var  goto 77
	exprs_comma_x  goto 133
	exprs_comma  goto 134


state 94
	index : '[' . expr ']'  (134)

	IDEN  shift 71
	STRING_LIT  shift 63
	INT_LIT  shift 64
	BOOL_LIT  shift 65
	NOT  shift 72
	CHAR_LIT  shift 66
	DOUBLE_LIT  shift 67
	'-'  shift 73
	'('  shift 74
	.  error

	literal  goto 75
	expr  goto 135
	var  goto 77


state 95
	var : IDEN indexs .  (5)
	indexs : indexs . index  (132)

	'['  shift 94
	PLUSPLUS  reduce 5
	MINUSMINUS  reduce 5
	ANDAND  reduce 5
	OROR  reduce 5
	GE  reduce 5
	LE  reduce 5
	EQUAL  reduce 5
	NOTEQUAL  reduce 5
	'>'  reduce 5
	'<'  reduce 5
	'+'  reduce 5
	'-'  reduce 5
	'*'  reduce 5
	'/'  reduce 5
	'%'  reduce 5
	')'  reduce 5
	';'  reduce 5
	','  reduce 5
	'='  reduce 5
	'}'  reduce 5
	']'  reduce 5

	index  goto 136


state 96
	indexs : index .  (133)

	.  reduce 133


state 97
	expr : expr . '+' expr  (44)
	expr : expr . '-' expr  (45)
	expr : expr . '*' expr  (46)
	expr : expr . '/' expr  (47)
	expr : expr . '%' expr  (48)
	expr : expr . '>' expr  (49)
	expr : expr . '<' expr  (50)
	expr : expr . GE expr  (51)
	expr : expr . LE expr  (52)
	expr : expr . EQUAL expr  (53)
	expr : expr . NOTEQUAL expr  (54)
	expr : NOT expr .  (55)
	expr : expr . ANDAND expr  (56)
	expr : expr . OROR expr  (57)

	GE  shift 102
	LE  shift 103
	EQUAL  shift 104
	NOTEQUAL  shift 105
	'>'  shift 106
	'<'  shift 107
	'+'  shift 108
	'-'  shift 109
	'*'  shift 110
	'/'  shift 111
	'%'  shift 112
	ANDAND  reduce 55
	OROR  reduce 55
	')'  reduce 55
	';'  reduce 55
	','  reduce 55
	']'  reduce 55


state 98
	expr : expr . '+' expr  (44)
	expr : expr . '-' expr  (45)
	expr : expr . '*' expr  (46)
	expr : expr . '/' expr  (47)
	expr : expr . '%' expr  (48)
	expr : expr . '>' expr  (49)
	expr : expr . '<' expr  (50)
	expr : expr . GE expr  (51)
	expr : expr . LE expr  (52)
	expr : expr . EQUAL expr  (53)
	expr : expr . NOTEQUAL expr  (54)
	expr : expr . ANDAND expr  (56)
	expr : expr . OROR expr  (57)
	expr : '-' expr .  (58)

	.  reduce 58


state 99
	expr : expr . '+' expr  (44)
	expr : expr . '-' expr  (45)
	expr : expr . '*' expr  (46)
	expr : expr . '/' expr  (47)
	expr : expr . '%' expr  (48)
	expr : expr . '>' expr  (49)
	expr : expr . '<' expr  (50)
	expr : expr . GE expr  (51)
	expr : expr . LE expr  (52)
	expr : expr . EQUAL expr  (53)
	expr : expr . NOTEQUAL expr  (54)
	expr : expr . ANDAND expr  (56)
	expr : expr . OROR expr  (57)
	expr : '(' expr . ')'  (59)

	ANDAND  shift 100
	OROR  shift 101
	GE  shift 102
	LE  shift 103
	EQUAL  shift 104
	NOTEQUAL  shift 105
	'>'  shift 106
	'<'  shift 107
	'+'  shift 108
	'-'  shift 109
	'*'  shift 110
	'/'  shift 111
	'%'  shift 112
	')'  shift 137
	.  error


state 100
	expr : expr ANDAND . expr  (56)

	IDEN  shift 71
	STRING_LIT  shift 63
	INT_LIT  shift 64
	BOOL_LIT  shift 65
	NOT  shift 72
	CHAR_LIT  shift 66
	DOUBLE_LIT  shift 67
	'-'  shift 73
	'('  shift 74
	.  error

	literal  goto 75
	expr  goto 138
	var  goto 77


state 101
	expr : expr OROR . expr  (57)

	IDEN  shift 71
	STRING_LIT  shift 63
	INT_LIT  shift 64
	BOOL_LIT  shift 65
	NOT  shift 72
	CHAR_LIT  shift 66
	DOUBLE_LIT  shift 67
	'-'  shift 73
	'('  shift 74
	.  error

	literal  goto 75
	expr  goto 139
	var  goto 77


state 102
	expr : expr GE . expr  (51)

	IDEN  shift 71
	STRING_LIT  shift 63
	INT_LIT  shift 64
	BOOL_LIT  shift 65
	NOT  shift 72
	CHAR_LIT  shift 66
	DOUBLE_LIT  shift 67
	'-'  shift 73
	'('  shift 74
	.  error

	literal  goto 75
	expr  goto 140
	var  goto 77


state 103
	expr : expr LE . expr  (52)

	IDEN  shift 71
	STRING_LIT  shift 63
	INT_LIT  shift 64
	BOOL_LIT  shift 65
	NOT  shift 72
	CHAR_LIT  shift 66
	DOUBLE_LIT  shift 67
	'-'  shift 73
	'('  shift 74
	.  error

	literal  goto 75
	expr  goto 141
	var  goto 77


state 104
	expr : expr EQUAL . expr  (53)

	IDEN  shift 71
	STRING_LIT  shift 63
	INT_LIT  shift 64
	BOOL_LIT  shift 65
	NOT  shift 72
	CHAR_LIT  shift 66
	DOUBLE_LIT  shift 67
	'-'  shift 73
	'('  shift 74
	.  error

	literal  goto 75
	expr  goto 142
	var  goto 77


state 105
	expr : expr NOTEQUAL . expr  (54)

	IDEN  shift 71
	STRING_LIT  shift 63
	INT_LIT  shift 64
	BOOL_LIT  shift 65
	NOT  shift 72
	CHAR_LIT  shift 66
	DOUBLE_LIT  shift 67
	'-'  shift 73
	'('  shift 74
	.  error

	literal  goto 75
	expr  goto 143
	var  goto 77


state 106
	expr : expr '>' . expr  (49)
